--- a/test.html
+++ b/test.html
@@ -11,16 +11,7 @@
       function redirect() {
       // Replace 'myapp://myweb.com?anyparam=123' with your desired URL scheme
       var url = 'formiapp://formi.id/link?route=user_schedule&appointment_id=1411';
-      
-      var iframe = document.createElement('iframe');
-      iframe.style.display = 'none';
-      iframe.src = url;
-      
-      document.body.appendChild(iframe);
-      setTimeout(function() {
-        document.body.removeChild(iframe);
-        window.location.replace(url);
-      }, 500);
+      window.location.href = url;
     }
     </script>
   </body>
