--- a/test.html
+++ b/test.html
@@ -6,6 +6,11 @@
 <body>
   <h1>Open Apps</h1>
 
-<a href="formiapp://formi.id/link?route=user_schedule&appointment_id=1411" target="_blank">Open App</a>
+<a href="formidevapp://formi.id/link?route=user_schedule&appointment_id=1411" target="_blank">Open Dev App</a>
+  <br>
+  <a href="formistagingapp://formi.id/link?route=user_schedule&appointment_id=1411" target="_blank">Open Staging App</a>
+  <br>
+  <a href="formiapp://formi.id/link?route=user_schedule&appointment_id=1411" target="_blank">Open Prod App</a>
+  
 </body>
 </html>
