--- a/test.html
+++ b/test.html
@@ -6,9 +6,9 @@
 <body>
   <h1>Open Apps</h1>
 
-<a href="formidevapp://formi.id/link?route=user_schedule&appointment_id=1411" target="_blank">Open Dev App</a>
+<a href="formiappdev://formi.id/link?route=user_schedule&appointment_id=1411" target="_blank">Open Dev App</a>
   <br>
-  <a href="formistagingapp://formi.id/link?route=user_schedule&appointment_id=1411" target="_blank">Open Staging App</a>
+  <a href="formiappstaging://formi.id/link?route=user_schedule&appointment_id=1411" target="_blank">Open Staging App</a>
   <br>
   <a href="formiapp://formi.id/link?route=user_schedule&appointment_id=1411" target="_blank">Open Prod App</a>
   
