--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
   <title>Open App</title>
   <script>
     function openTab() {
-    window.open("formiappdev://formi.id/link?route=user_schedule&appointment_id=1411", "_blank");
+    window.open("formiappdev://formi.id/link?route=user_schedule&appointment_id=1411", "_self");
     }
   </script>
 </head>
